evaluator/parser_grammer.gram

### PARSER GRAMMER

# PEG grammer for parsing


## CLARIFICATIONS:
# 1. empty space means nothing special
# 2. ? after terminal on nonterminal means optional
# rules are order dependent (first is used before second)
# duplication of similar rules is prefered for better readability (just in documentation)


---------------------- GRAMMER ------------------------


PARSE:
    | EXPR '$'

EXPR:
    | DISJUNCTION

DISJUNCTION:
    | CONJUCTION ('or' CONJUCTION)*

CONJUCTION:
    | COMPARE_OPERATOR ('and'COMPARE_OPERATOR)*

COMPARE_OPERATOR:
    | NEGATION (COMPARE_TERMINAL NEGATION)*

COMPARE_TERMINAL:
    | 'not' 'in'
    | 'is' 'not'
    | 'in'
    | 'is'
    | '<='
    | '>='
    | '<'
    | '>'
    | '=='
    | '!='

COMPARE_OPERATOR:
    | NEGATION '<=' NEGATION ('and' NEGATION)*

NEGATION:
    | 'not' NEGATION
    | HIGH_ORD_OPERATOR

LOW_ORD_OPERATOR:
    | HIGH_ORD_OPERATOR ('+' HIGH_ORD_OPERATOR)*
    | HIGH_ORD_OPERATOR ('-' HIGH_ORD_OPERATOR)*

HIGH_ORD_OPERATOR:
    | FACTOR ('//' FACTOR)*
    | FACTOR ('/' FACTOR)*
    | FACTOR ('%' FACTOR)*
    | FACTOR ('*' FACTOR)*

FACTOR:
    | '-' FACTOR
    | '+' FACTOR
    | POWER

POWER:
    | ATOM ** FACTOR
    | ATOM

ATOM:
    | INT
    | FLOAT
    | BOOL
    | IDENT
    | STR
    | LIST
    | TUPLE
    | '(' EXPR ')'

# in parser called list_rule
LIST:
    | '[' LIST_BODY? ']'

LIST_BODY:
    | EXPR (',' EXPR)* ','?

# in parser called tuple_rule
TUPLE:
    | '(' TUPLE_BODY? ')'

TUPLE_BODY:
    | EXPR ',' (EXPR (',' EXPR)* ','?)?
